Filmstrip title overlapping content issue fixed — closes #332

--- a/assets/scss/5-components/_portfolio.scss
+++ b/assets/scss/5-components/_portfolio.scss
@@ -238,6 +238,10 @@
         z-index: 350;
         opacity: 0;
 
+        @include query-above($lap) {
+            left: 110px;
+        }
+
         &.portfolio--visible {
             opacity: 1;
         }
